# stream-rec

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  detailed_comparison.py  detailed_comparison_results.json  docker-compose.dev.yml  docker-compose.yml  docker.sh  evaluate_recommendations.py  evaluation_results.json  pyproject.toml  run_server.py  test_api.py  test_both_endpoints.py
data/: .gitkeep  dataset_stats.json  hometown_test.parquet  hometown_train.parquet  interactions.parquet  streams.parquet  users.parquet
material/: POC.md  Scenarios.md  Task.md
models/: hometown_model.pkl
notebooks/: hometown_data_exploration.ipynb
scripts/: generate_hometown_dataset.py  train_models.py
src/stream_rec/: __init__.py
src/stream_rec/api/: main.py
src/stream_rec/models/: __init__.py  data_models.py
src/stream_rec/services/: __init__.py  data_store.py  hometown_recommender.py  model_trainer.py
tests/: test_home_feed.py
